# mapping

launch/launch/: segment_stitching.launch  segment_storage.launch
logger/: CMakeLists.txt  package.xml
logger/launch/: logger.launch
logger/src/: logger.cpp  logger.hpp
map_representation/: CMakeLists.txt  package.xml
map_representation/src/: mapRepresentation.cpp  mapRepresentation.hpp
mapping/: CMakeLists.txt  package.xml
mapping_launch/: CMakeLists.txt  package.xml
mapping_launch/launch/: map_representation.launch  segment_stitching.launch  segment_storage.launch  topological.launch
mapping_msgs/: CMakeLists.txt  package.xml
mapping_msgs/msg/: Line.msg  MapSegment.msg  Node.msg  NodeList.msg  Object.msg  SegmentLineVector.msg  SegmentObjectVector.msg  SegmentPoint.msg  StitchingResults.msg
segment_stitching/: CMakeLists.txt  package.xml
segment_stitching/data/: segments_2014-12-11_18-29-51.bag  segments_2014-12-11_18-57-16.bag  segments_2014-12-11_19-55-04.bag
segment_stitching/src/: segmentStitching.cpp  segmentStitching.hpp
segment_storage/: CMakeLists.txt  package.xml
segment_storage/src/: mapSegment.cpp  segmentStorage.cpp  segmentStorage.hpp
topological_map/: CMakeLists.txt  package.xml
topological_map/config/: params.yaml
topological_map/data/: topmap_2014-12-08_18-42-24.bag  topmap_2014-12-08_18-57-20.bag  topmap_2014-12-09_17-02-15.bag  topmap_2014-12-11_15-19-43.bag  topmap_2014-12-11_17-47-05.bag  topmap_2014-12-11_18-21-13.bag  topmap_2014-12-11_18-29-56.bag  topmap_2014-12-11_18-57-14.bag  topmap_2014-12-11_19-55-02.bag
topological_map/src/: topological.cpp  topological.hpp
