<package>
  <name>mapping</name>
  <version>0.0.0</version>
  <description>
    Mapping metapackage
  </description>
  <maintainer email="michalst@kth.se">Michal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
   <metapackage />
 </export>
</package>

