<?xml version="1.0"?>
<package>
  <name>mapping_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the mapping package</description>

  <maintainer email="michalst@kth.se">michal</maintainer>

  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
