<?xml version="1.0"?>
<package>
  <name>segment_storage</name>
  <version>0.0.0</version>
  <description>Package for recording and storing map segments</description>

  <maintainer email="michalst@kth.se">michal</maintainer>

  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>ir_sensors</build_depend>
  <run_depend>ir_sensors</run_depend>
  <build_depend>mapping_msgs</build_depend>
  <run_depend>mapping_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
